force-app/main/default/objects/Species__c/fields/Blooming__c.field-meta.xml
<CustomField>
    <fullName>Blooming__c</fullName>
    <label>Blooming</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>blooming</fullName>
                <default>true</default>
                <label>blooming</label>
            </value>
            <value>
                <fullName>bleeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>