force-app/main/default/objects/Species__c/fields/Light__c.field-meta.xml
<CustomField>
    <fullName>Light__c</fullName>
    <label>Light</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin Luz</fullName>
                <default>true</default>
                <label>Sin Luz</label>
            </value>
            <value>
                <fullName>Poca Luz</fullName>
            </value>
            <value>
                <fullName>Mucha Luz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>