force-app/main/default/objects/Species__c/fields/Planting__c.field-meta.xml
<CustomField>
    <fullName>Planting__c</fullName>
    <label>Planting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planting 1</fullName>
                <default>true</default>
                <label>Planting 1</label>
            </value>
            <value>
                <fullName>Planting 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>